--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -41,7 +41,7 @@ jobs:
         id: pages
         uses: actions/configure-pages@v5
       - name: Build with mdBook
-        run: mdbook build https://github.com/AleMorales9011/DevOps-Handbook.git
+        run: mdbook build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
