--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -5,10 +5,10 @@
 name: Deploy mdBook site to Pages
 
 on:
-  # Runs on schedule at 4:00 am Brazil time.
-  schedule:
-    cron: "0 1 * * *"
-
+  push: 
+    branches:
+      - 'main'
+  
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
