--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -1,14 +1,10 @@
-# Sample workflow for building and deploying a mdBook site to GitHub Pages
-#
-# To get started with mdBook see: https://rust-lang.github.io/mdBook/index.html
-#
-name: Deploy mdBook site to Pages
+name: Deploy mdBook site with Linting & Link Checking
 
 on:
-  push: 
+  push:
     branches:
       - 'main'
-  
+
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -19,13 +15,29 @@ permissions:
   id-token: write
 
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+# However, DO NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 jobs:
-  # Build job
+  # Lint & Link Check job
+  lint-and-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install required tools
+        run: |
+          sudo apt-get update && sudo apt-get install -y markdownlint
+      - name: Lint Markdown files
+        run: markdownlint "*.md"  
+      - name: Check for broken links
+        uses: gaurav-nelson/github-action-markdown-link-check@v1  
+      - name: Fail workflow if errors found (optional)
+        uses: stephendnicholas/failed@v1
+        if: failure()  
+
+  # Build job 
   build:
     runs-on: ubuntu-latest
     env:
@@ -47,13 +59,14 @@ jobs:
         with:
           path: ./book
 
-  # Deployment job
+  # Deployment job 
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs: build
+    needs:
+      - lint-and-check  # Ensure lint & check job runs first
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
