--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -1,11 +1,9 @@
-
-name: Deploy mdBook site with Linting & Link Checking
+name: Deploy mdBook site to Pages
 
 on:
   push:
     branches:
       - 'main'
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -49,16 +47,15 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./book
-        if: ${{ success() }}
+        if: ${{ success() }}  # Ensures upload happens only if build succeeded
 
-  # Deployment job 
+  # Deployment job
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
-    needs:
-      - lint-and-check  # Ensure lint & check job runs first
+    needs: build  # Ensures deployment happens only after successful build
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
