--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -34,7 +34,7 @@ jobs:
           cargo install --version ${MDBOOK_VERSION} mdbook
       - name: Setup Pages
         id: pages
-        uses: actions/configure-pages@v  
+        uses: actions/configure-pages@v5 
       - name: Install Markdownlint
         run:  sudo apt-get update && sudo apt-get install -y markdownlint
       - name: Check for proper lint
