--- a/.github/workflows/mdbook.yml
+++ b/.github/workflows/mdbook.yml
@@ -40,7 +40,7 @@ jobs:
       - name: Check for proper lint
         uses: DavidAnson/markdownlint-cli2-action@v16
         with:
-          globs: '**/*.md'
+          globs: --no-line-length, "*.md"          
       - name: Check for broken links
         uses: gaurav-nelson/github-action-markdown-link-check@v1  # Or another preferred action
       - name: Build with mdBook (only if lint and link checks pass)
