--- a/src/book.toml
+++ b/src/book.toml
@@ -1,7 +1,8 @@
 [book]
-title = "Forgeware"
+title = "ForgeWare"
 authors = ["Alejandro Morales", "Amanda Estevez, Ailen Morales"]
 description = "Collection of resources and tools for implementing DevOps practices."
+
 [output.html]
 theme = "my-theme"
 default-theme = "ayu"
