--- a/src/book.toml
+++ b/src/book.toml
@@ -7,3 +7,5 @@ description = "Collection of resources and tools for implementing DevOps practic
 theme = "my-theme"
 default-theme = "ayu"
 preferred-dark-theme = "ayu"
+git-repository-url = "https://github.com/AleMorales9011/ForgeWare"
+git-repository-icon = "fa-github"
